# libzl

./: .gitignore  .gitmodules  CMakeLists.txt  libzl.jucer
JuceLibraryCode/: JuceHeader.h
Source/: ZynthiLoopsComponent.cpp  ZynthiLoopsComponent.h  libzl.cpp  libzl.h
debian/: changelog  control  copyright  rules
lib/: AudioLevels.cpp  AudioLevels.h  ClipAudioSource.cpp  ClipAudioSource.h  ClipAudioSourcePositionsModel.cpp  ClipAudioSourcePositionsModel.h  ClipCommand.h  DeviceMessageTranslations.h  Helper.cpp  Helper.h  JUCEHeaders.h  JackPassthrough.cpp  JackPassthrough.h  MidiRouter.cpp  MidiRouter.h  MyAudioProcessor.cpp  QPainterContext.cpp  QPainterContext.h  SamplerSynth.cpp  SamplerSynth.h  SamplerSynthSound.cpp  SamplerSynthSound.h  SamplerSynthVoice.cpp  SamplerSynthVoice.h  SyncTimer.cpp  SyncTimer.h  TimerCommand.h  TransportManager.cpp  TransportManager.h  WavMetadataHelper.cpp  WavMetadataHelper.h  WaveFormItem.cpp  WaveFormItem.h  ZynthiLoopsComponent.cpp  ZynthiLoopsComponent.h  libzl.cpp  libzl.h
test/: playtest.py  playtest.qml  test.py  waveform.qml  waveformtest.py
